--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Lizard Page</title>
-<link href="images/lizardicon.svg" type="Image/svg" rel="icon"/>
-<link href="style.css" rel="stylesheet" type="text/css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lizard Page</title>
+    <link href="images/lizardicon.svg" type="Image/svg" rel="icon"/>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header>
@@ -12,10 +15,10 @@
         </div>
     </header>
     <nav>
-        <li>Home</li>
-        <li>Service</li>
-        <li>Contact</li>
-        <li>About</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
     </nav>
     <article>
         <h1 class="arttitle">Blue Lizz Website !</h1>
@@ -23,7 +26,7 @@
         <img class="lizardimage" src="images/LizardPicture.webp" alt="Lizard Image">
     </article>
     <footer>
-        <p class="Copyright ">© 2024 Lizz Blue. All righ</p>
+        <p class="Copyright "> &copy; 2024 Lizz Blue. All righ</p>
     </footer>
    
 </body>
